# youtube_downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/youtube_downloader/: downloader.py  gui.py  main.py  utils.py
src/youtube_downloader.egg-info/: PKG-INFO  SOURCES.txt
